# ragdoll

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
actions/: api-keys.ts  documents.ts  metadata-schemas.ts  projects.ts
api/: Dockerfile  app.py  fly.toml  pyproject.toml
api/api/: app.py
api/api/src/api/document/: routes.py
api/api/src/database/: client.py
api/api/src/database/tables/: chunk.py  document.py  project.py
api/api/src/globals/: environment.py
api/api/src/modules/chunking/: module.py
api/api/src/providers/ai/: async_openai.py
api/src/: enums.py  models.py
api/src/api/document/: io.py  routes.py
api/src/api/v1/: dependencies.py  io.py  routes.py
api/src/database/: client.py
api/src/database/tables/: api_key.py  chunk.py  document.py  metadata_schema.py
api/src/globals/: environment.py
api/src/modules/chunking/: module.py
api/src/providers/ai/: async_openai.py
api/src/types/: ai.py
app/: globals.css  layout.tsx
app/dashboard/projects/: layout.tsx
components/: page.tsx
lib/stores/: app-store.ts
types/: auth.ts  projects.ts
www/: middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
www/actions/: api-keys.ts  auth.ts  documents.ts  metadata-schemas.ts  projects.ts
www/app/: globals.css  layout.tsx  page.tsx
www/app/dashboard/: layout.tsx
www/components/: form.tsx
www/components/custom/: button.tsx
www/components/dashboard/: sidebar.tsx
www/schema/: api-keys.ts  documents.ts  metadata-schemas.ts  projects.ts
www/types/: projects.ts  user.ts
www/utils/supabase/: server.ts
(+49 files in other folders)
