[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Farouk Charkas <farouk.charkas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
semantic-text-splitter = "^0.18.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
supabase = "^2.10.0"
tokenizer = "^3.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
